; ModuleID = '/home/carl/AnghaBench/mimikatz/mimikatz/modules/extr_kuhl_m_acr.c_kuhl_m_acr_close.c'
source_filename = "/home/carl/AnghaBench/mimikatz/mimikatz/modules/extr_kuhl_m_acr.c_kuhl_m_acr_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@kuhl_m_acr_Comm = common dso_local global i32 0, align 4
@kuhl_m_acr_hContext = common dso_local global i64 0, align 8
@STATUS_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @kuhl_m_acr_close(i32 %0, i32** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32**, align 8
  store i32 %0, i32* %3, align 4
  store i32** %1, i32*** %4, align 8
  %5 = call i32 @kull_m_acr_finish(i32* @kuhl_m_acr_Comm)
  %6 = load i64, i64* @kuhl_m_acr_hContext, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %11

8:                                                ; preds = %2
  %9 = load i64, i64* @kuhl_m_acr_hContext, align 8
  %10 = call i32 @SCardReleaseContext(i64 %9)
  store i64 0, i64* @kuhl_m_acr_hContext, align 8
  br label %11

11:                                               ; preds = %8, %2
  %12 = load i32, i32* @STATUS_SUCCESS, align 4
  ret i32 %12
}

declare dso_local i32 @kull_m_acr_finish(i32*) #1

declare dso_local i32 @SCardReleaseContext(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
